Email Archival Application/objects/EmailArchive__b.object
<CustomObject>
    <fields>
        <fullName>DateTimeStampIndex__c</fullName>
        <label>DateTimeStamp Index</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordJson0__c</fullName>
        <label>RecordJson0</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordJson10__c</fullName>
        <label>RecordJson10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordJson11__c</fullName>
        <label>RecordJson11</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>indexNumber__c</fullName>
        <label>indexNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>searchindex</fullName>
        <fields>
            <name>indexNumber__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>DateTimeStampIndex__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>searchindex</label>
    </indexes>
    <label>EmailArchive</label>
    <pluralLabel>EmailArchives</pluralLabel>
</CustomObject>